--- a/common/spline.tex
+++ b/common/spline.tex
@@ -264,7 +264,7 @@ The \fncte{$0$th order B-spline} \xref{def:Bspline} $\fN_0(x)$ can be expressed 
 \end{proof}
 
 %---------------------------------------
-\begin{example}
+\begin{example}[\exmd{$1$st order B-spline}]
 \footnote{
   \citerpgc{christensen2008}{148}{0817646779}{Exercise 6.2},
   \citerpgc{christensen2010}{212}{0817649794}{Exercise 10.2},
@@ -317,7 +317,7 @@ The \fncte{$1$st order B-spline} $\fN_1(x)$ can be expressed as follows:
 \end{proof}
 
 %---------------------------------------
-\begin{example}
+\begin{example}[\exmd{$2$nd order B-spline}]
 \footnote{
   \citerpgc{christensen2008}{148}{0817646779}{Exercise 6.2},
   \citerpgc{christensen2010}{212}{0817649794}{Exercise 10.2},
@@ -487,7 +487,7 @@ Proof follows by induction:
 %  \caption{some \fncte{B-splines} $\fN_n(x)$ \label{tab:bsplines}}
 %\end{table}
 %---------------------------------------
-\begin{example}
+\begin{example}[\exmd{$3$rd order B-spline}]
 \footnote{
   \citerpgc{schumaker2007}{136}{0521705126}{Table 1},
   \citerpgc{shizgal2015}{92}{9401794545}{(2.199)},
