--- a/common/wavelets/vanish.tex
+++ b/common/wavelets/vanish.tex
@@ -136,8 +136,7 @@ Let $\Dh(\omega)$ and $\Dg(\omega)$ be the \fncte{DTFT}s \xref{def:dtft} of $\se
       \\&= \left.\opddwn  \Dg(\omega)\Fphi(\omega)\right|_{\omega=0}
         && \text{by \prefp{prop:vsmra_real_Fpsi}}
       \\&= \left.\sum_{k=0}^n {n \choose k} \Dg^{(k)}(\omega)\Fphi^{(n-k)}(\omega)\right|_{\omega=0}
-        && \text{by \thme{Leibnitz GPR}}
-        && \text{\xref{lem:LGPR}}
+        && \text{by \thme{Leibnitz GPR} \xref{lem:LGPR}}
       \\&= \brs{
            \Dg^{(n)}(\omega)\Fphi(\omega)
            +\sum_{k=0}^{n-1} {n \choose k} \Dg^{(k)}(\omega)\Fphi^{(n-k)}(\omega)
@@ -533,7 +532,6 @@ Let $\wavsys$ be a wavelet system and $M_n$ the \hie{$n$th moment} \xref{def:Mn}
 %---------------------------------------
 \begin{theorem}
 \label{thm:sfix_poly}
-\index{Strang-Fix condition}
 %---------------------------------------
 Let $\wavsys$ be a wavelet system with $p$ vanishing moments.
 Let $\fq(x)$ be a \fncte{polynomial}.
@@ -541,22 +539,20 @@ Let
   \\\indentx$\setQ_p\eqd\set{\fq(x)}{\text{$\fq(x)$ is a \fncte{polynomial} of order $p-1$ or less}}$.\\
 \thmbox{
   \brb{\begin{array}{FMD}
-    1. & $\fpsi$ has $p$ vanishing\\
-       & moments                     & and \\
-    2. & $\fq(x)$ is of order $p-1$
+      1. & $\fpsi$ has $p$ vanishing
+    \\   & moments                     & and 
+    \\2. & $\fq(x)$ is of order $p-1$
   \end{array}}
   \quad\implies\quad
   \brb{\begin{array}{FMD}
-    1. & There exists $\tuple{b_n}{0}{p-1}$ such that \\
-       & $\ds\fq(x) = \sum_{n=0}^{p-1} b_n \sum_{k\in\Z} k^n\fphi(x-k)$ & and\\
-    2. & $\setxZ{\opTrn^n\fphi(x)}$ is a \structe{basis} for $\setQ_p$.
+      1. & There exists $\tuple{b_n}{0}{p-1}$ such that
+    \\   & $\ds\fq(x) = \sum_{n=0}^{p-1} b_n \sum_{k\in\Z} k^n\fphi(x-k)$ & and
+    \\2. & $\setxZ{\opTrn^n\fphi(x)}$ is a \structe{basis} for $\setQ_p$.
   \end{array}}
   }
 \end{theorem}
 \begin{proof}
-This follows from \prefp{lem:sfixc}
-(Strang-Fix condition).
-See \prefp{ex:sfixc5}.
+This follows from the \thme{Strang-Fix condition} \xxref{lem:sfixc}{ex:sfixc5}.
 \end{proof}
 
 %---------------------------------------
@@ -1030,6 +1026,7 @@ Let $\wavsys$ be a \structe{wavelet system}.
 \\\indentx\tbox{\includegraphics{../common/math/graphics/pdfs/n1_pz.pdf}}
      \quad\tbox{\includegraphics{../common/math/graphics/pdfs/n1_h.pdf}}
      \quad\tbox{\includegraphics{../common/math/graphics/pdfs/b1_g.pdf}}
+\\The resulting scaling function is the \fncte{$1$st order B-spline} \xref{ex:bspline_N1}.
 \end{example}
 \begin{proof}
 \begin{enumerate}
@@ -1113,16 +1110,17 @@ Let $\wavsys$ be a \structe{wavelet system}.
           \end{array}}
         \end{align*}
 
-    \item Proof using \prefpp{lem:van_factor} (and placing two zeros at $z=-1$):
-      \begin{align*}
-        \Zh(z)
-          &= \sqrt{2} \brs{\frac{ \brp{z+1}^2 }
-                                { \brp{1+1}^2 z^2 }}
-           = \frac{\sqrt{2}}{4} \brs{\frac{ z^2 + 2z + 1 }
-                                          { z^2          }}
-           = \frac{\sqrt{2}}{4} \brs{ 1 + 2z^{-1} + z^{-2} }
-      \end{align*}
   \end{enumerate}
+
+  \item Note: Using the sufficient condition of placing two zeros at $z=-1$ \xref{lem:van_factor} yields the same result\ldots
+    \begin{align*}
+      \Zh(z)
+        &= \sqrt{2} \brs{\frac{ \brp{z+1}^2 }
+                              { \brp{1+1}^2 z^2 }}
+         = \frac{\sqrt{2}}{4} \brs{\frac{ z^2 + 2z + 1 }
+                                        { z^2          }}
+         = \frac{\sqrt{2}}{4} \brs{ 1 + 2z^{-1} + z^{-2} }
+    \end{align*}
 \end{enumerate}
 \end{proof}
 
@@ -1153,6 +1151,7 @@ Let $\wavsys$ be a \structe{wavelet system}.
 \\\tbox{\includegraphics{../common/math/graphics/pdfs/n2_pz.pdf}}
   \tbox{\includegraphics{../common/math/graphics/pdfs/n2_h.pdf}}
   \tbox{\includegraphics{../common/math/graphics/pdfs/b2_g.pdf}}
+\\The resulting scaling function is the \fncte{$2$nd order B-spline} \xref{ex:bspline_N2}.
 \end{example}
 \begin{proof}
 \begin{enumerate}
@@ -1250,16 +1249,17 @@ Let $\wavsys$ be a \structe{wavelet system}.
           \end{array}}
         \end{align*}
 
-    \item Proof using \prefpp{lem:van_factor} (and placing three zeros at $z=-1$):
-      \begin{align*}
-        \Zh(z)
-          &= \sqrt{2} \brs{\frac{ \brp{z+1}^3 }
-                                { \brp{1+1}^3 z^3 }}
-           = \frac{\sqrt{2}}{8} \brs{\frac{ z^3 + 3z^2 + 3z + 1 }
-                                          { z^3          }}
-           = \frac{\sqrt{2}}{8} \brs{ 1 + 3z^{-1} + 3z^{-2} + z^{-3} }
-      \end{align*}
   \end{enumerate}
+
+  \item Note: Using the sufficient condition of placing three zeros at $z=-1$ \xref{lem:van_factor} yields the same result\ldots
+    \begin{align*}
+      \Zh(z)
+        &= \sqrt{2} \brs{\frac{ \brp{z+1}^3 }
+                              { \brp{1+1}^3 z^3 }}
+         = \frac{\sqrt{2}}{8} \brs{\frac{ z^3 + 3z^2 + 3z + 1 }
+                                        { z^3          }}
+         = \frac{\sqrt{2}}{8} \brs{ 1 + 3z^{-1} + 3z^{-2} + z^{-3} }
+    \end{align*}
 \end{enumerate}
 \end{proof}
 
@@ -1275,9 +1275,9 @@ Let $\wavsys$ be a \structe{wavelet system}.
 Let $\wavsys$ be a \structe{wavelet system}.
 \exbox{
   \brb{\begin{array}{FMMD}
-      (1). & $\support\fphi(x)=\intcc{0}{3}$     & \xref{thm:mra_support}  & and
+      (1). & $\support\fphi(x)=\intcc{0}{4}$     & \xref{thm:mra_support}  & and
     \\(2). & \prope{admissibility condition}     & \xref{thm:admiss}       & and
-    \\(3). & \prope{partition of unity} /        & \xref{thm:pun_zero}     & and
+    \\(3). & \prope{partition of unity}          & \xref{thm:pun_zero}     & and
     \\(4). & \prope{vanishing 1st moment}        & \xref{thm:gh_cqf}       & and
     \\(5). & \prope{vanishing 2nd moment}        & \xref{thm:gh_cqf}       & and
     \\(6). & \prope{vanishing 3rd moment}        & \xref{thm:gh_cqf}       &
@@ -1297,6 +1297,7 @@ Let $\wavsys$ be a \structe{wavelet system}.
 \\\indentx\tbox{\includegraphics{../common/math/graphics/pdfs/n3_pz.pdf}}
 \\\indentx\tbox{\includegraphics{../common/math/graphics/pdfs/n3_h.pdf}}
   \indentx\tbox{\includegraphics{../common/math/graphics/pdfs/b3_g.pdf}}
+\\The resulting scaling function is the \fncte{$3$rd order B-spline} \xref{ex:bspline_N3}.
 \end{example}
 \begin{proof}
 \begin{enumerate}
@@ -1406,7 +1407,9 @@ Let $\wavsys$ be a \structe{wavelet system}.
           \end{array}}
         \end{align*}
 
-  \item Proof using \prefpp{lem:van_factor} (and placing four zeros at $z=-1$):
+    \end{enumerate}
+
+  \item Note: Using the sufficient condition of placing four zeros at $z=-1$ \xref{lem:van_factor} yields the same result\ldots
     \begin{align*}
       \Zh(z)
         &= \sqrt{2}\brs{\frac{(z+1)^4} {(1+1)^4 z^4}}
@@ -1416,66 +1419,24 @@ Let $\wavsys$ be a \structe{wavelet system}.
         && \text{by definition of $\bcoef{n}{k}$ \ifxref{binomial}{def:bcoef}}
       \\&= \frac{\sqrt{2}}{16} \brs{ 1 + 4z^{-1} + 6z^{-2} + 4z^{-3} + 1z^{-4}}
     \end{align*}
-          \\\indentx$\brp{\begin{array}{c|*{9}{c}}
-              n=0: &   &   &   &   & 1 &   &   &   &
-            \\n=1: &   &   &   & 1 &   & 1 &   &   &
-            \\n=2: &   &   & 1 &   & 2 &   & 1 &   &
-            \\n=3: &   & 1 &   & 3 &   & 3 &   & 1 &
-            \\n=4: & 1 &   & 4 &   & 6 &   & 4 &   & 1
-          \end{array}}$
-    \end{enumerate}
+    \\\indentx$\brp{\begin{array}{c|*{9}{c}}
+        n=0: &   &   &   &   & 1 &   &   &   &
+      \\n=1: &   &   &   & 1 &   & 1 &   &   &
+      \\n=2: &   &   & 1 &   & 2 &   & 1 &   &
+      \\n=3: &   & 1 &   & 3 &   & 3 &   & 1 &
+      \\n=4: & 1 &   & 4 &   & 6 &   & 4 &   & 1
+    \end{array}}$
 \end{enumerate}
 \end{proof}
 
+As it turns out, all \structe{B-splines} satisfy the \prope{partition of unity} property \xref{thm:bspline_punity}
+\emph{and} the \prope{multi-resolution} property \xref{thm:bspline_2x}.
+All of the scaling functions in the examples in this section form a \hie{partition of unity},
+but yet are not orthogonal.
+In particular, note that for all of them $\sum_{n\in\Z} (-1)^n\fh_n = 0$ \xref{thm:pun_zero}.
 
-%Examples of wavelets with $p$ vanishing moments include the B-spline wavelets and the Daubechies-$p$ wavelets.
-%
-%\begin{tabular}{|>{\scs}rlcll|}
-%  \hline
-%     &  name & $p$ & &
-%  \\\hline
-%  %1. &  Haar                            & 1 & \pref{ex:pun_n=2}       & \prefpo{ex:pun_n=2}\\
-%  %2. &  order 1 B-spline wavelet system & 2 & \pref{ex:sw_gh_tent}    & \prefpo{ex:sw_gh_tent}\\
-%  %3. &  order 3 B-spline wavelet system & 4 & \pref{ex:sw_gh_bspline} & \prefpo{ex:sw_gh_bspline}\\
-%  1. &  order 0 B-spline & 1 & \pref{ex:N0_hg}                           & \prefpo{ex:N0_hg} \\
-%  2. &  order 1 B-spline & 2 & \pref{ex:N1_hg}                           & \prefpo{ex:N1_hg} \\
-%  3. &  order 2 B-spline & 3 & \pref{ex:N2_hg}                           & \prefpo{ex:N2_hg} \\
-%  4. &  Daubechies-p2    & 2 & \ifdochas{compactp}{\pref{ex:dau-p2}}     & \ifdochas{compactp}{\prefpo{ex:dau-p2}}\\
-%  5. &  Daubechies-p3    & 3 & \ifdochas{compactp}{\pref{ex:dau-p3}}     & \ifdochas{compactp}{\prefpo{ex:dau-p3}} \\
-%  6. &  Symlet-p4        & 4 & \ifdochas{compactp}{\pref{ex:symlet_p4}}  & \ifdochas{compactp}{\prefpo{ex:symlet_p4}}\\
-%  \hline
-%\end{tabular}
-%
-
-%\[\begin{array}{llcllll}
-%  1. & \ds\sum_{n\in\Z}  \fh_n   &=& \sqrt{2}
-%     & \text{(admissiblility condition)}
-%     & \text{\pref{thm:admiss}}
-%     & \text{page~\pageref{thm:admiss}}
-%\\
-%\\
-%  2. & \ds\sum_{m\in\Z} \fh_m \fh^\ast_{m-2n} &=& \kdelta_n
-%     & \text{(quadrature condition)}
-%     & \text{\pref{thm:quadcon}}
-%     & \text{page~\pageref{thm:quadcon}}
-%\\
-%\\
-%  3. & \ds\sum_{m\in\Z} (-1)^m m^p  \fh_m   &=& 0
-%     & \text{(vanishing $p$th moment)}
-%     & \text{\pref{thm:vanish}}
-%     & \text{page~\pageref{thm:vanish}}
-%\end{array}\]
-%
-%Note that the ``zero at $z=-1$" constraint
-%(\pref{thm:zero_unity_evenodd} page~\pageref{thm:zero_unity_evenodd})
-%is just the vanishing 0th moment (and hence included in 3. for $p=0$).
-%Also, the ``partition of unity" and ``even-odd" constraints
-%are, by the same theorem, equivalent  to the
-%``zero at $z=-1$" constraint.
-
-
-
-
+Other examples of wavelets systems with $p$ vanishing moments the Daubechies-$p$ \xref{sec:examples_Dp} wavelet systems 
+and Symlets \xref{sec:symlet_examples}.
 
 %%---------------------------------------
 %\begin{theorem}
@@ -1613,66 +1574,3 @@ Let $\wavsys$ be a \structe{wavelet system}.
 %\end{align*}
 %\end{proof}
 
-%\begin{figure}
-%  \centering%
-%  $\begin{array}{|*{3}{>{\ds}c|}}
-%     \hline
-%      \includegraphics{../common/math/graphics/pdfs/n0_h.pdf}
-%     &\includegraphics{../common/math/graphics/pdfs/n1_h.pdf}
-%     &\includegraphics{../common/math/graphics/pdfs/n2_h.pdf}
-%    %&\includegraphics{../common/math/graphics/pdfs/bspline_phi_h.pdf}
-%     \\
-%      \fN_0(x) %= \sqrt{2}\sum_{k=0}^1 \brp{\frac{1}{\sqrt{2}}\bcoef{1}{k}} \fN_0(2x-k)
-%     &\fN_1(x) %= \sqrt{2}\sum_{k=0}^2 \brp{\frac{1}{\sqrt{2}}\bcoef{2}{k}} \fN_1(2x-k)
-%     &\fN_2(x) %= \sqrt{2}\sum_{k=0}^2 \brp{\frac{1}{\sqrt{2}}\bcoef{2}{k}} \fN_1(2x-k)
-%     \\\hline
-%       \mc{2}{|c|}{\includegraphics{../common/math/graphics/pdfs/n3_h.pdf}}
-%      &\includegraphics{../common/math/graphics/pdfs/n4_h.pdf}
-%     \\
-%       \mc{2}{|c|}{\fN_3(x)} %= \sqrt{2}\sum_{k=0}^4 \brp{\frac{1}{\sqrt{2}}\bcoef{4}{k}} \fN_3(2x-k)
-%      &\fN_4(x)
-%     \\\hline
-%  \end{array}$
-%  \caption{Some B-splines \label{fig:partuni_Nde}}
-%\end{figure}
-%As it turns out, all \structe{B-splines} satisfy the \prope{partition of unity} property \xref{thm:bspline_punity}
-%\emph{and} the \prope{multi-resolution} property \xref{thm:bspline_2x}.
-%See \pref{ex:pun_n=2} (next), \prefpp{app:bspline}, and \prefpp{fig:partuni_Nde} for examples.
-%All of the scaling functions in the examples in this section form a \hie{partition of unity},
-%but yet are not orthogonal.
-%In particular, note that for all of them $\sum_{n\in\Z} (-1)^n\fh_n = 0$ (see \pref{thm:pun_zero}).
-
-
-%%--------------------------------------
-%\begin{example}[\exm{order 1 B-spline wavelet system}]
-%\footnote{
-%  \citerp{strang89}{616},
-%  \citerppgc{dau}{146}{148}{0898712742}{\textsection 5.4}
-%  }
-%\label{ex:sw_gh_tent}
-%\exmx{tent function}
-%%--------------------------------------
-%The following figures illustrate scaling and wavelet coefficients and functions
-%for the \hie{B-Spline $B_2$}, or \fncte{tent function}. % \xref{ex:pounity_tent}.
-%The partition of unity formed by the scaling function $\fphi(x)$ is illustrated in \prefpp{ex:n1_pounity}. %\prefp{ex:pounity_tent}.
-%\\\exbox{\begin{array}{m{40mm}m{51mm}m{51mm}}
-%  $\begin{array}{>{\scy}c|r|r}
-%    n & \mc{1}{c}{h_n} & \mc{1}{c}{g_n} \\
-%    \hline
-%      0   &  \brp{\frac{\sqrt{2}}{4}}  &   \brp{\frac{\sqrt{2}}{4}}  \\
-%      1   & 2\brp{\frac{\sqrt{2}}{4}}  & -2\brp{\frac{\sqrt{2}}{4}}            \\
-%      2   &  \brp{\frac{\sqrt{2}}{4}}  &   \brp{\frac{\sqrt{2}}{4}}
-%  \end{array}$
-%  &\includegraphics{../common/math/graphics/pdfs/tent_phi_h.pdf}&\includegraphics{../common/math/graphics/pdfs/tent_psi_g.pdf}
-%\end{array}}
-%\end{example}
-%\begin{proof}
-% \item These results follow from \prefp{thm:Bsplineh}.
-%\\\indentx$\brp{\begin{array}{*{9}{c}}
-%    &   &   &   & 1 &   &   &   &  \\
-%    &   &   & 1 &   & 1 &   &   &  \\
-%    &   & 1 &   & 2 &   & 1 &   &
-%\end{array}}$
-%\end{enumerate}
-%\end{proof}
-%
