partition of unity edit

--- a/common/wavelets_partuni.tex
+++ b/common/wavelets_partuni.tex
@@ -71,7 +71,7 @@ constraint on its own:
 \label{def:pun}
 %-------------------------------------
 \defbox{\begin{array}{M}
-  {A function $\ff\in\spRR$ forms a \hid{partition of unity} if}
+  {A function $\ff\in\spRR$ forms a \propd{partition of unity} if}
   \\\indentx$\ds\sum_{n\in\Z} \opTrn^n\ff(x) = 1 \qquad \forall x\in\R$.
 \end{array}}
 \end{definition}
@@ -422,7 +422,7 @@ as formerly stated next and demonstrated by
 
 %=======================================
 \section{Counter Examples}
-%\label{sec:examples_pounity}
+\label{sec:pounity_counter}
 %=======================================
 There are functions that form a \prope{partition of unity}, but yet do \emph{not} satisfy
 the \prope{dilation equation} \xref{thm:dilation_eq} \ldots and as such are \emph{not} scaling functions \xrefP{def:mra}.
@@ -548,8 +548,6 @@ Let $\setind_\setA(x)$ be the \fncte{set indicator function} \xref{def:setind} o
 \end{enumerate}
 \end{proof}
 
-
-
 %-------------------------------------
 \begin{counterex}[\exmd{raised sine}]
 \label{cnt:pun_rsin}
@@ -657,10 +655,13 @@ Let $\setind_\setA(x)$ be the \fncte{set indicator function} \xref{def:setind} o
 
 %=======================================
 \section{Examples}
-%\label{sec:examples_pounity}
+\label{sec:pounity_examples}
 %=======================================
-Under a very weak set of constraints, the B-spline $\fN_0(x)$
-naturally results (next example).
+Unlike the counter examples of \pref{sec:pounity_counter}, this section provides examples of systems that
+generate a \prope{partition of unity} \xref{def:pun} \textbf{and} an \prope{MRA} \xref{def:mra}.
+Arguably the simplest of these examples is the \fncte{Order 0 B-spline} $\fN_0(x)$,
+which naturally results from a very weak set of constraints (next example).
+
 %--------------------------------------
 \begin{example}[\exmd{2 coefficient case}/\exmd{Haar wavelet system}/\exmd{order 0 B-spline wavelet system}]
 \footnote{
@@ -678,11 +679,11 @@ naturally results (next example).
   \end{array}}
   \implies
   \brb{\begin{array}{c|l}%
-    n  & \fh_{n}\\  %& g_n\\
-    \hline
-    0            & \ds \cwt\\   %& \ds \cwt   \\
-    1            & \ds \cwt\\   %& \ds -\cwt  \\
-    \text{other} & 0          %& 0
+      n            & \fh_{n}
+    \\\hline
+      0            & \frac{\sqrt{2}}{2}
+    \\1            & \frac{\sqrt{2}}{2}
+    \\\text{other} & 0          %& 0
   \end{array}}
   }
 \\\indentx\tbox{\includegraphics{../common/math/graphics/pdfs/n0_pz.pdf}}
@@ -695,13 +696,13 @@ naturally results (next example).
 
   \item Proof for values of $h_0$ and $h_1$:
         Under the constraint of two non-zero scaling coefficients,
-        a scaling function design is fully constrained using the \hie{admissibility equation} \xref{thm:admiss}
-        and the \hie{partition of unity} constraint\ifsxref{partuni}{def:pun}.
-        The partition of unity formed by $\fphi(x)$ is illustrated in \prefpp{ex:n0_pounity}. %\prefp{ex:pounity_squarepulse}.
+        a scaling function design is fully constrained using the \prope{admissibility equation} \xref{thm:admiss}
+        and the \prope{partition of unity} constraint\ifsxref{partuni}{def:pun}.
+        The partition of unity formed by $\fphi(x)$ is illustrated in \prefpp{ex:n0_pounity}.
   \item Here are the equations:
         \\\indentx$\ds\begin{array}{rcl@{\qquad}MMM}
-         \fh_0 +\fh_1 &=& \sqrt{2}    & (admissibility equation          & \pref{thm:admiss}   & \prefpo{thm:admiss}) \\
-         \fh_0 -\fh_1 &=& 0           & (partition of unity/zero at $-1$ & \pref{thm:pun_zero} & \prefpo{thm:pun_zero})
+          \fh_0 +\fh_1 &=& \sqrt{2}    & (admissibility equation   & \pref{thm:admiss}   & \prefpo{thm:admiss})
+        \\\fh_0 -\fh_1 &=& 0           & (partition of unity       & \pref{thm:pun_zero} & \prefpo{thm:pun_zero})
         \end{array}$
         \\
   \item Here are the calculations for the coefficients:
