--- a/common/sty/resume.sty
+++ b/common/sty/resume.sty
@@ -112,9 +112,8 @@
         \quad\tboxc{\href{https://creativecommons.org/licenses/by-nc-nd/4.0/}{\ccbyncnd}}\quad\mbox{}%
        &\fntAdventor\tboxc{\imarkL\quad\tboxc{#2\\#3}\quad\imarkL\quad\fntDigital\tboxc{}}%
        %&\sffamily\scshape\tboxc{\today\quad\currenttime\\%
-       &\sffamily\scshape\tboxc{\today\quad\currenttime\hspace{1ex}UTC\\%
-                               %Copyright {\textcopyright} 2017 Daniel J. Greenhoe%
-                               \copyrightshort}%
+       &\sffamily\scshape\tboxc{\today\quad\currenttime\hspace{1ex}EDT\\%
+                               }%\copyrightshort}%
       \\\hline%
     \end{tabular*}}%
 \fancyhf[FOC]{% footer odd pages
@@ -124,9 +123,8 @@
     \begin{tabular*}{\tw}{|c@{\extracolsep\fill}|c|c|}%
       \hline\hline%
 %        \sffamily\scshape\tboxc{\today\quad\currenttime\\%
-        \sffamily\scshape\tboxc{\today\quad\currenttime\hspace{1ex}UTC\quad\\%
-                               %Copyright {\textcopyright} 2017 Daniel J. Greenhoe%
-                               \copyrightshort}%
+        \sffamily\scshape\tboxc{\today\quad\currenttime\hspace{1ex}EDT\quad\\%
+                               }%\copyrightshort}%
        &\fntAdventor\tboxc{\imarkL\quad\tboxc{#2\\#3}\quad\imarkL\quad\fntDigital\tboxc{}}%
        &\tboxc{\href{https://creativecommons.org/licenses/by-nc-nd/4.0/}{\ccbyncnd}}%
       \\\hline%
