--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -1217,6 +1217,19 @@
   urla         = {http://www.amazon.com/dp/9780486780528},
   }
 
+@article{marston2006,
+  journal      = {The Journal of the Acoustical Society of America},
+  volume       = {119},
+  number       = {5},
+  page         = {2553},
+  year         = {2006},
+  month        = {May},
+  doi          = {10.1121/1.2184129},
+  url          = {https://doi.org/10.1121/1.2184129},
+  publisher    = {Acoustical Society of America},
+  author       = {P. L. Marston},
+  }
+
 @book{matheron1975,
   author       = {Georges Matheron},
   title        = {Random Sets and Integral Geometry},
