Laplace Transform capacitor impedance example

--- a/abcbodc/intro.tex
+++ b/abcbodc/intro.tex
@@ -23,7 +23,7 @@ rock, and/or moisture.
 \section{Method}
 %======================================
 This text follows the approach of \emph{Model-Based Signal Processing}\footnote{
-  \citer{candy1985}, \citer{candy1992}, \citer{candy2005}, \citer{marston2006} }
+  \citer{candy1985}, \citer{candy1992}, \citer{candy2005}, \citer{marston2006}, \citer{bucker1976}, \citer{baggeroer1993} }
 which implies three components of the detection and classification operator pair:
 \begin{enume}
   \item A \fncte{cost function}---an operation by which the effectiveness of the operations can be measured.
