--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -1421,6 +1421,50 @@ Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}.
   \end{align*}
 \end{proof}
 
+%--------------------------------------
+\begin{example}
+\label{ex:opLT_capZ}
+%--------------------------------------
+\exboxt{
+  The \ope{Laplace Transform} of the \prope{impedance} $Z(s)$ of an ideal capacitor with \prope{capacitance} C,
+  \\ initial voltage $\fv(-\infty)=0$, and finite total energy stored over all time, is
+  \\\indentx$\ds Z(s) = \frac{1}{sC}$.
+  }
+\end{example}
+\begin{proof}
+\begin{enumerate}
+  \item An ideal capacitor is modeled with the equation $\ds\fnct{i}(t) = C\ddt\fv(t)$.
+  \item lemma: Because initial voltage is $0$, $\ds\lim_{t\to\infty}\brs{e^{st}\fv(-t)}=0$. \label{ilem:opLT_capZ1}
+  \item lemma: Because the capacitor has finite energy, $\ds\lim_{t\to\infty}\brs{e^{-st}\fv(t)}=0$. \label{ilem:opLT_capZ2}
+  \item
+    \begin{align*}
+      \fZ(s)
+        &  \eqd \frac{\fV(s)}
+                     {\fI(s)}
+        && \text{by definition of \prope{impedance} $\fZ(s)$}
+      \\&  \eqd \frac{\fV(s)}
+                     {\ds\opLT \brs{\fnct{i}(t)} }
+        && \text{by definition of \ope{Laplace Transform} $\fI(s)$ of $\fnct{i}(t)$}
+      \\&  \eqd \frac{\fV(s)}
+                     {\ds\opLT \brs{ C \ddt\fv(t)} }
+        && \text{by definition of \ope{ideal Capacitor} with \prope{Capacitance} $C$}
+      \\&  =    \frac{\fV(s)}
+                     {\ds C\opLT \brs{ \ddt\fv(t)} }
+        && \text{by \prope{homogeneous} property of $\opLT$ \prefpp{thm:opLT_linear}}
+      \\&  =    \frac{\fV(s)}
+                     {\ds Cs\brp{\opLT \brs{ \fv(t)} + \lim_{t\to\infty}\brs{e^{-st}\fv(t) + e^{st}\fv(-t)} }}
+        && \text{by \prefp{thm:opLT_diff}}
+      \\&  =    \frac{\fV(s)}
+                     {\ds Cs\opLT \brs{ \fv(t)}}
+        && \text{by \pref{ilem:opLT_capZ1} and \pref{ilem:opLT_capZ2}}
+      \\&  \eqd \frac{\fV(s)}
+                     {\ds Cs\opLT \fV(s)}
+        && \text{by definition of $\fV(s)$}
+      \\&  = \frac{1}{sC}
+    \end{align*}
+\end{enumerate}
+\end{proof}
+
 %======================================
 \section{Moment properties}
 %======================================
