--- a/common/bib/digcom.bib
+++ b/common/bib/digcom.bib
@@ -62,6 +62,21 @@
   number       = {4},
   }
 
+@article{baggeroer1993,
+  author       = {A.B. Baggeroer and W.A. Kuperman and P.N. Mikhalevsky},
+  title        = {An overview of matched field methods in ocean acoustics},
+  year         = {1993},
+  month        = {October},
+  doi          = {10.1137/1036146},
+  url          = {https://doi.org/10.1109/48.262292},
+  journal      = { The Journal of the Acoustical Society of America },
+  publisher    = {IEEE},
+  doi          = {10.1109/48.262292},
+  pages        = {401--424},
+  volume       = {18},
+  number       = {4},
+  }
+
 @book{balakrishnan2009,
   author       = {N Balakrishnan and Chin-Diew Lai},
   title        = {Continuous Bivariate Distributions},
@@ -88,6 +103,21 @@
   url          = {http://books.google.com/books?vid=ISBN9781439822067},
   urlw         = {http://www.worldcat.org/isbn/9781439822067},
   urla         = {http://www.amazon.com/dp/9781439822067},
+  }
+
+@article{bucker1976,
+  author       = {Homer P. Bucker},
+  title        = {Use of calculated sound fields and matched-field detection to locate sound sources in shallow water},
+  year         = {1976},
+  month        = {February 25},
+  doi          = {10.1137/1036146},
+  url          = {https://doi.org/10.1121/1.380872},
+  journal      = { The Journal of the Acoustical Society of America },
+  publisher    = {Acoustical Society of America},
+  doi          = {10.1121/1.380872},
+  pages        = {368--},
+  volume       = {59},
+  number       = {2},
   }
 
 @book{byrne2005,
