start 2019xcordef JACM version

--- a/common/dspcalculus.tex
+++ b/common/dspcalculus.tex
@@ -14,26 +14,42 @@
 \section{Digital differentiation methods}
 %=======================================
 %=======================================
-%\subsection{Method 1: Difference}
+\subsection{Method 1: Difference}
 %=======================================
 
+%---------------------------------------
+\begin{definition}
+\footnote{
+  \citerpgc{williams1986}{69}{9780132018562}{Difference}
+  }
+%---------------------------------------
+\defboxt{
+  The \ope{difference operator} $\Delta$ over a discrete-time sequence $\seqX$ is defined as
+  \\\indentx$\ds \Delta\fx[n] \eqd \fx[n+1] - \fx[n]$
+  }
+\end{definition}
 
-Digital Differentiation Method \#1: \ope{Difference}\footnote{\citerpgc{williams1986}{69}{9780132018562}{Difference}}
- 
+%---------------------------------------
+\begin{theorem}
+\footnote{
+  \citerpgc{williams1986}{69}{9780132018562}{Difference}
+  }
+%---------------------------------------
+\thmboxt{
+  The \ope{difference operator} $\Delta$ has \ope{Z transform} 
+  $\ds z-1$
+  }
+\end{theorem}
+\begin{proof}
 \begin{align*}
-  \fy[n]
-    &\eqd \fx[n] - \fx[n-1]
-  \\\\
-  \opZ\brb{\fy[n]} &= \opZ\brb{\fx[n] - \fx[n-1]}
+  \opZ\brb{\fy[n]} &= \opZ\brb{\fx[n+1] - \fx[n]}
   \\
-  \ZY(z) &= \ZX(z) + z^{-1}\ZX(z)
-  \\\\
-  \frac{\ZY(z)}{\ZX(z)} &= 1-z^{-1} \quad=\quad \boxed{\frac{z-1}{z}}
-  \qquad\brb{\begin{array}{MM}
-    How many zeros? & Where?\\
-    How many poles? & Where?
-  \end{array}}
+  \ZY(z) &= z\ZX(z) - \ZX(z)
+  \\
+  \frac{\ZY(z)}{\ZX(z)} 
+    &= z - 1
 \end{align*}
+\end{proof}
 
 %---------------------------------------
 %\newpage\mbox{} 
