--- a/common/taylor.tex
+++ b/common/taylor.tex
@@ -62,7 +62,7 @@ knowledge of the derivatives of a function at a location $x=a$
 %\\\indentx$\seqn{\ff(a),\, \frac{1}{1!}\ff'(a),\,  \frac{1}{2!}\ff''(a),\,  \frac{1}{3!}\ff'''(a),\cdots}$\\
 %of the Taylor polynomial at the point $x=a$ 
 allows you to determine (predict) arbitrarily closely all the points $\ff(x)$ in the vicinity of $x=a$:\footnote{
-\citePp{robinson1982}{886}
+\citer{taylor1715}, \citer{taylor1717}, \citePp{robinson1982}{886}
 }
 \\\indentx$\ds\ff(x) = \ff(a) + \frac{1}{1!}\ff'  (a)\brs{x-a}
                               + \frac{1}{2!}\ff'' (x)\brs{x-a}^2
@@ -95,9 +95,9 @@ On the other hand, the \ope{Fourier Transform} is a kind of counter-part of the 
   \citerpgc{flanigan1983}{221}{0486613887}{Theorem 15},
   \citerpg{strichartz1995}{281}{0867204710},
   \citerpgc{sohrab2003}{317}{0817642110}{Theorem 8.4.9},
-  \citer{taylor},
+  \citer{taylor1715},
   \citer{taylor1717},
-  \citer{maclaurin}
+  \citer{maclaurin1742}
   %\citerc{as}{pages 14, 880}
   %\citerp{mallat}{164}
   }
@@ -108,8 +108,8 @@ and $\hxs{\opDif}$ in $\clF{\spC}{\spC}$ the \ope{differentiation operator}.
 \thmboxt{
   A \opd{Taylor Series} about the point $x=a$ of a function $\ff(x)\in\clF{\spC}{\spC}$ is
   \\\indentx$\ds\begin{array}{rc>{\ds}lC}
-    \ff(x) &=& \sum_{n=0}^\infty \mcom{\frac{\brs{\opDif^n\ff}(a)}{n!}}{coefficient}\:\mcoml{(x-a)^n}{basis function}
-           &   \forall a\in\R,\,\ff\in\spC
+    \ff(x) &=& \sum_{n=0}^\infty \mcom{ \frac{1}{n!} \brs{\opDifn\ff}(a) }{coefficient} \: \mcoml{(x-a)^n}{basis function} & \forall a\in\R,\,\ff\in\spC
+             %                          | coefficient:                    |                 | basis fnct. |                   | Domain                   |
   \end{array}$
   \\A \opd{Maclaurin Series} is a \ope{Taylor Series} about the point $a=0$.
   }
