--- a/2019xcordef/JACM/intro.tex
+++ b/2019xcordef/JACM/intro.tex
@@ -19,7 +19,7 @@ which is defined as the \ope{Z-Transform} of $\Rxy(m)$:
   \citerpgc{papoulis1984}{265}{0070484686}{``Power Spectrum"},
   \citerpgc{kay1988}{52}{8131733564}{``$P_{xx}(f)$\ldots(1.1)"},
   \citerpgc{bendat1980}{50}{0471058874}{``3.2.1 Spectra via Correlation Functions"},
-  \citerpgc{bendat1980}{50}{0471058874}{``3.2.1 Spectra via Correlation Functions"},
+  %\citerpgc{bendat1980}{50}{0471058874}{``3.2.1 Spectra via Correlation Functions"},
   \citerpgc{bendat2010}{118}{1118210824}{``5.2.1 Spectra via Correlation Functions"}
 %  }
 \label{def:Swxy}
