2019xcordef JACM sty and bib files

--- a/common/bib/digcom.bib
+++ b/common/bib/digcom.bib
@@ -142,7 +142,8 @@
   publisher    = {Macmillan Publishing Company},
   address      = {New York},
   language     = {english},
-  url          = {http://frontweb.vuse.vanderbilt.edu/vuse_web/directory/facultybio.asp?FacultyID=9},
+  url          = {https://books.google.com/books?vid=ISBN9780023180101},
+  urlx         = {http://frontweb.vuse.vanderbilt.edu/vuse_web/directory/facultybio.asp?FacultyID=9},
   }
 
 @book{cerquera2017,
