2019xcordef JACM add xcor_xyreal.tex

--- a/2019xcordef/JACM/formatting.sty
+++ b/2019xcordef/JACM/formatting.sty
@@ -36,6 +36,16 @@
 \newcommand{\tboxt}[1]{\begin{tabular}[t]{c}#1\end{tabular}}% useful for properly top-side horizontal alignment
 \newcommand{\tboxc}[1]{\begin{tabular}{@{}c@{}}#1\end{tabular}}% useful for properly centered vertical alignment
 
+\newcommand{\defboxt} [1]{\defbox{\begin{array}{M}#1\end{array}}}
+\newcommand{\thmboxt} [1]{\thmbox{\begin{array}{M}#1\end{array}}}
+\newcommand{\corboxt} [1]{\corbox{\begin{array}{M}#1\end{array}}}
+\newcommand{\lemboxt} [1]{\lembox{\begin{array}{M}#1\end{array}}}
+\newcommand{\propboxt}[1]{\propbox{\begin{array}{M}#1\end{array}}}
+\newcommand{\exboxt}  [1]{\exbox{\begin{array}{M}#1\end{array}}}
+\newcommand{\cntboxt} [1]{\cntbox{\begin{array}{M}#1\end{array}}}
+\newcommand{\axboxt}  [1]{\axbox{\begin{array}{M}#1\end{array}}}
+\newcommand{\remboxt} [1]{\rembox{\begin{array}{M}#1\end{array}}}
+
 \newcolumntype{R}{>{\cellcolor{red}\upshape\bfseries\color{white}}c}
 \newcolumntype{G}{>{\cellcolor{tblgreen}\upshape\bfseries\color{white}}c}
 \newcolumntype{B}{>{\cellcolor{blue}\upshape\bfseries\color{white}}c}
