--- a/2019xcordef/JACM/main.tex
+++ b/2019xcordef/JACM/main.tex
@@ -27,7 +27,7 @@
   \input{abstract.tex}
   \input{intro.tex}
   \input{xcordef.tex}
-%  \input{xcor_xyreal.tex}
+  \input{xcor_xyreal.tex}
 %  \input{case_studies.tex}
 %    \input{case_addnoise.tex}
 %    \input{case_dual_noise.tex}
