2019xcordef JACM add case_studies.tex

--- a/2019xcordef/JACM/formatting.sty
+++ b/2019xcordef/JACM/formatting.sty
@@ -8,6 +8,8 @@
 \newcommand{\indentx}{\ensuremath{\mbox{}\qquad}}%
 \newcommand{\citerpgc}[4]{\cite[page #2]{#1}}
 \newcommand{\citerpg}[3]{\cite[page #2]{#1}}
+\newcommand{\citerp}[2]{\cite[page #2]{#1}}
+\newcommand{\citerc}[2]{\cite{#1}}
 \newcommand{\xref}[1]{\ref{#1}}
 \newcommand{\defbox}[1]{\mbox{}\\$\displaystyle#1$\\}
 \newcommand{\lembox}[1]{\mbox{}\\$\displaystyle#1$\\}
@@ -65,3 +67,34 @@
 \newcolumntype{N}{>{$}c<{$}}
 \newcolumntype{O}{>{$}r<{$}}
 \newcolumntype{z}{>{\zhtzye}l}
+
+\newenvironment{liste}[1][\imark]
+  {\begin{list}{#1}{
+      \setlength{\topsep        }{0ex}
+      \setlength{\partopsep     }{0ex}
+      \setlength{\parsep        }{0ex}
+      \setlength{\itemsep       }{0ex}
+      \setlength{\leftmargin    }{4ex}
+      \setlength{\rightmargin   }{4ex}
+      \setlength{\listparindent }{0ex}
+      \setlength{\labelwidth    }{1ex}
+      \setlength{\labelsep      }{1ex}
+      \setlength{\itemindent    }{0ex}
+      }}
+   {\end{list}}
+
+\newenvironment{listi}[1][\imarks]%list for indexes
+  {\begin{list}{#1}{
+      \setlength{\topsep        }{0ex}
+      \setlength{\partopsep     }{0ex}
+      \setlength{\parsep        }{0ex}
+      \setlength{\itemsep       }{0ex}
+      \setlength{\leftmargin    }{4ex}
+      \setlength{\rightmargin   }{4ex}
+      \setlength{\listparindent }{0ex}
+      \setlength{\labelwidth    }{5ex}
+      \setlength{\labelsep      }{0ex}
+      \setlength{\itemindent    }{0ex}
+      }}
+   {\end{list}}
+
