--- a/2019xcordef/JACM/main.tex
+++ b/2019xcordef/JACM/main.tex
@@ -28,7 +28,7 @@
   \input{intro.tex}
   \input{xcordef.tex}
   \input{xcor_xyreal.tex}
-%  \input{case_studies.tex}
+  \input{case_studies.tex}
 %    \input{case_addnoise.tex}
 %    \input{case_dual_noise.tex}
 %    \input{case_parallel_ops.tex}
