2019xcordef JACM add case_addnoise.tex

--- a/2019xcordef/JACM/formatting.sty
+++ b/2019xcordef/JACM/formatting.sty
@@ -5,6 +5,8 @@
 %============================================================================
 
 \newcommand{\tw}{\textwidth}
+\newcommand{\scs}{\scriptsize}%
+\newcommand{\scy}{\scriptstyle}%
 \newcommand{\indentx}{\ensuremath{\mbox{}\qquad}}%
 \newcommand{\citerpgc}[4]{\cite[page #2]{#1}}
 \newcommand{\citerpg}[3]{\cite[page #2]{#1}}
