--- a/2019xcordef/JACM/main.tex
+++ b/2019xcordef/JACM/main.tex
@@ -29,7 +29,7 @@
   \input{xcordef.tex}
   \input{xcor_xyreal.tex}
   \input{case_studies.tex}
-%    \input{case_addnoise.tex}
+    \input{case_addnoise.tex}
 %    \input{case_dual_noise.tex}
 %    \input{case_parallel_ops.tex}
 %    \input{case_operator_mnoise.tex}
