2019xcordef JACM compile in case_dual_noise.tex

--- a/2019xcordef/JACM/symbols.sty
+++ b/2019xcordef/JACM/symbols.sty
@@ -9,7 +9,10 @@
 \newcommand{\opd}[1]{\emph{#1}}
 \newcommand{\fncte}[1]{\emph{#1}}
 \newcommand{\fnctd}[1]{\emph{#1}}
+\newcommand{\Rrv}{R_{rv}}
 \newcommand{\Rvv}{R_{vv}}
+\newcommand{\Rwx}{R_{wx}}
+\newcommand{\Rwv}{R_{wv}}
 \newcommand{\Rxx}{R_{xx}}
 \newcommand{\Rxv}{R_{xv}}
 \newcommand{\Rvx}{R_{vx}}
@@ -19,16 +22,22 @@
 \newcommand{\Rxt}{R_{xt}}
 \newcommand{\Rtx}{R_{tx}}
 \newcommand{\Ryt}{R_{yt}}
+\newcommand{\Rrx}{R_{rx}}
+\newcommand{\Rsy}{R_{sy}}
 \newcommand{\Rty}{R_{ty}}
 \newcommand{\Swvv}{\tilde{S}_{vv}}
+\newcommand{\Swrx}{\tilde{S}_{rx}}
 \newcommand{\Swxx}{\tilde{S}_{xx}}
+\newcommand{\Swsy}{\tilde{S}_{sy}}
 \newcommand{\Swyy}{\tilde{S}_{yy}}
 \newcommand{\Swxy}{\tilde{S}_{xy}}
 \newcommand{\Swyx}{\tilde{S}_{yx}}
 \newcommand{\Szvv}{\check{S}_{vv}}
 \newcommand{\Szxx}{\check{S}_{xx}}
 \newcommand{\Szyy}{\check{S}_{yy}}
+\newcommand{\Szsy}{\check{S}_{sy}}
 \newcommand{\Szxy}{\check{S}_{xy}}
+\newcommand{\Szrx}{\check{S}_{rx}}
 \newcommand{\Szyx}{\check{S}_{yx}}
 \newcommand{\Szxt}{\check{S}_{xt}}
 \newcommand{\Sztx}{\check{S}_{tx}}
@@ -37,8 +46,11 @@
 \newcommand{\eqd}{=}
 \newcommand{\conj}{\ast}
 \newcommand{\mathfnct}[1]{#1}
+\newcommand{\rvr}[0]{\mathfnct{t}}
+\newcommand{\rvs}[0]{\mathfnct{s}}
 \newcommand{\rvt}[0]{\mathfnct{t}}
 \newcommand{\rvv}[0]{\mathfnct{v}}
+\newcommand{\rvw}[0]{\mathfnct{t}}
 \newcommand{\rvx}[0]{\mathfnct{x}}
 \newcommand{\rvy}[0]{\mathfnct{y}}
 
