2019xcordef JACM Case study: Dual additive noise

--- a/2019xcordef/JACM/symbols.sty
+++ b/2019xcordef/JACM/symbols.sty
@@ -12,6 +12,7 @@
 \newcommand{\Rrv}{R_{rv}}
 \newcommand{\Rvv}{R_{vv}}
 \newcommand{\Rwx}{R_{wx}}
+\newcommand{\Rwy}{R_{wy}}
 \newcommand{\Rwv}{R_{wv}}
 \newcommand{\Rxx}{R_{xx}}
 \newcommand{\Rxv}{R_{xv}}
@@ -27,12 +28,14 @@
 \newcommand{\Rty}{R_{ty}}
 \newcommand{\Swvv}{\tilde{S}_{vv}}
 \newcommand{\Swrx}{\tilde{S}_{rx}}
+\newcommand{\Swwy}{\tilde{S}_{wy}}
 \newcommand{\Swxx}{\tilde{S}_{xx}}
 \newcommand{\Swsy}{\tilde{S}_{sy}}
 \newcommand{\Swyy}{\tilde{S}_{yy}}
 \newcommand{\Swxy}{\tilde{S}_{xy}}
 \newcommand{\Swyx}{\tilde{S}_{yx}}
 \newcommand{\Szvv}{\check{S}_{vv}}
+\newcommand{\Szwy}{\check{S}_{wy}}
 \newcommand{\Szxx}{\check{S}_{xx}}
 \newcommand{\Szyy}{\check{S}_{yy}}
 \newcommand{\Szsy}{\check{S}_{sy}}
@@ -99,6 +102,7 @@
 \newcommand{\conv}{\star}  % convolution
 \newcommand{\convd}{\conv}  % discrete convolution
 \newcommand{\invo}{\ast}   % involution
+\newcommand{\kdelta}[0]{\bar{\delta}}
 
 %---------------------------------------
 % Operators
