--- a/2019xcordef/JACM/main.tex
+++ b/2019xcordef/JACM/main.tex
@@ -31,7 +31,7 @@
   \input{case_studies.tex}
     \input{case_addnoise.tex}
     \input{case_dual_noise.tex}
-%    \input{case_parallel_ops.tex}
+    \input{case_parallel_ops.tex}
 %    \input{case_operator_mnoise.tex}
 %    \input{case_dual_mnoise.tex}
 %    \input{case_systemid_nonlinear.tex}
